@@ -1,3 +1,3 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2002/11/28 07:12:09 schmonz Exp $
-bin/ksh
-man/man1/ksh.1
+@comment $NetBSD: PLIST,v 1.2 2002/11/28 07:42:06 jlam Exp $
+bin/pdksh
+man/man1/pdksh.1
